video section overflow fix

--- a/about_page/nila_about_page.css
+++ b/about_page/nila_about_page.css
@@ -32,6 +32,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+  overflow: hidden;
 }
 
 .vs-content-wrapper {
@@ -67,6 +68,7 @@
   position: absolute;
   color: var(--title-color);
   z-index: 1;
+  overflow: hidden;
 }
 
 /* video section */
